<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ImageView android:id="@+id/mainImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/main_image"
        android:scaleType="centerCrop"
        android:transitionName="@string/list_detail_transition_hero_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,7:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fish_pie" />

    <ImageView android:id="@+id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainImage"
        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="7dp" />

    <TextView android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="7dp"
        android:textColor="@color/textDark"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintTop_toBottomOf="@id/mainImage"
        tools:text="Betty Draper" />

    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:tint="@color/textLight"
        app:backgroundTint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="@+id/mainImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24px" />

    <TextView android:id="@+id/date"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="Tues, 10th Dec."
        android:textColor="@color/textLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:elevation="7dp" />

    <ImageView android:id="@+id/favButton"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/favourite_button"
        android:elevation="7dp"
        android:tint="@color/textLight"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="@id/date"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24px" />

    <TextView android:id="@+id/favCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:elevation="7dp"
        android:textColor="@color/textLight"
        app:layout_constraintStart_toEndOf="@id/favButton"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="1435" />

    <TextView android:id="@+id/bodyText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:transitionName="@string/list_detail_transition_body_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

</android.support.constraint.ConstraintLayout>